--- a/config/config.yml
+++ b/config/config.yml
@@ -11,8 +11,8 @@ defaults: &defaults
   upyun_bucket: "nongyouquan"
   google_group_email: "shanghaionrails@googlegroups.com"
   email_sender: 'jfreebird@gmail.com'
-  aws_access_key_id: ""
-  aws_secret_access_key: ""
+  aws_access_key_id: "AKIAJZNDG7TN5GM7A5MQ"
+  aws_secret_access_key: "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"
   twitter_token: "uJ9fBa53SmqrHBqs1qq5cg"
   twitter_secret: "b9e9hbsa9sYYCqmW0kTyfALshclmkQX4kzTm8BBBTw"
   github_token: "207bd3415f6f42bcf8da"
